Chg'ed from sram to sdram in branch catzip of repo icozip. . The following software in sw/host compiled ok when files from catzip were added. sw/host/arm-flashid   sw/host/arm-sdramscope  sw/host/arm-zipdbg sw/host/arm-netpport  sw/host/arm-wbregs      sw/host/arm-zipload sw/host/arm-rdsdram   sw/host/arm-wrsdram     sw/host/arm-zipstate
The simulator still does not compile.

--- a/auto-data/Makefile
+++ b/auto-data/Makefile
@@ -49,11 +49,12 @@ all:	data
 BASE    := global.txt # dlyarbiter.txt
 AUX     := version.txt buserr.txt pic.txt pwrcount.txt
 IO      := gpio.txt # spio.txt
-MEMORY  := spixpress.txt sramdev.txt bkram.txt
+MEMORY  :=  sdramdev.txt bkram.txt #spixpress.txt
 DBGBUS  := hbconsole.txt
 CPU     := zipbones.txt
 SCOPES  := # spixscope.txt
 LDSCRIPT:= mem_flash_bkram.txt mem_bkram_only.txt mem_flash_sram.txt mem_sram_only.txt
+LDSCRIPT:= mem_flash_bkram.txt mem_bkram_only.txt mem_flash_sram.txt mem_sdram_only.txt
 BONUS   :=
 DATA := clock50.txt $(BASE) $(AUX) $(IO) $(MEMORY) $(DBGBUS) $(CPU) $(SCOPES) $(BONUS) $(LDSCRIPT)
 	# Not used: rtclite.txt watchdog.txt
