--- a/auto-data/Makefile
+++ b/auto-data/Makefile
@@ -53,7 +53,7 @@ MEMORY  :=  sdramdev.txt bkram.txt #spixpress.txt
 DBGBUS  := hbconsole.txt
 CPU     := zipbones.txt
 SCOPES  := # spixscope.txt
-LDSCRIPT:= mem_flash_bkram.txt mem_bkram_only.txt mem_flash_sram.txt mem_sram_only.txt
+##LDSCRIPT:= mem_flash_bkram.txt mem_bkram_only.txt mem_flash_sram.txt mem_sram_only.txt
 LDSCRIPT:= mem_flash_bkram.txt mem_bkram_only.txt mem_flash_sram.txt mem_sdram_only.txt
 BONUS   :=
 DATA := clock50.txt $(BASE) $(AUX) $(IO) $(MEMORY) $(DBGBUS) $(CPU) $(SCOPES) $(BONUS) $(LDSCRIPT)
