--- a/sw/board/Makefile
+++ b/sw/board/Makefile
@@ -51,7 +51,7 @@ SOURCES := cputest.c hello.c jpeg.c lifting.c rd_bytes.c
 HEADERS := $(foreach hdr,$(subst .c,.o,$(SOURCES)),$(wildcard $(hdr))) board.h
 LDSCRIPT:= -Tboardram.ld
 LFLAGS  := $(LDSCRIPT) -L../zlib
-INCS    := -I../zlib -I../../rtl/icozip -I.
+INCS    := -I../zlib -I../../rtl/catzip -I.
 CFLAGS  := -O3 $(INCS)
 LIBS    := -lc -licozip
 INSTALLD:=/home/devel/zipcpu/sw/install
