addtional Makfile chgs

--- a/sw/zlib/Makefile
+++ b/sw/zlib/Makefile
@@ -41,7 +41,7 @@
 CC := zip-gcc
 AR := zip-ar
 OBJDIR  := obj-zip
-INCS    := -I. -I../../rtl/icozip
+INCS    := -I. -I../../rtl/catzip
 CFLAGS  := -O3 $(INCS)
 LIBSRCS := udiv.c umod.c syscalls.c crt0.c
 LIBOBJS := $(addprefix $(OBJDIR)/,$(subst .c,.o,$(LIBSRCS)))
