--- a/sw/zlib/Makefile
+++ b/sw/zlib/Makefile
@@ -45,7 +45,7 @@ INCS    := -I. -I../../rtl/catzip
 CFLAGS  := -O3 $(INCS)
 LIBSRCS := udiv.c umod.c syscalls.c crt0.c
 LIBOBJS := $(addprefix $(OBJDIR)/,$(subst .c,.o,$(LIBSRCS)))
-ZIPLIB  := libcatzipzip.a
+ZIPLIB  := libcatzip.a
 all: $(ZIPLIB)
 
 $(OBJDIR)/%.o: %.c
