--- a/sw/board/Makefile
+++ b/sw/board/Makefile
@@ -53,7 +53,7 @@ LDSCRIPT:= -Tboardram.ld
 LFLAGS  := $(LDSCRIPT) -L../zlib
 INCS    := -I../zlib -I../../rtl/catzip -I.
 CFLAGS  := -O3 $(INCS)
-LIBS    := -lc -libcatzip.
+LIBS    := -lc -lcatzip
 INSTALLD:=/home/devel/zipcpu/sw/install
 NLIBD	:=$(INSTALLD)/cross-tools/zip/lib
 ZLIBD	:=../zlib
