This would not compile and create a testbus.bin added a log file pnr.log
Info: Generated random seed: 811754976
Info: constrained 'i_btn[0]' to bel 'X27/Y33/io1'
Info: constrained 'i_btn[1]' to bel 'X16/Y33/io0'
Info: constrained 'i_clk' to bel 'X17/Y33/io0'
Info: constrained 'o_ledg[0]' to bel 'X18/Y33/io1'
Info: constrained 'o_ledg[1]' to bel 'X13/Y33/io0'
Info: constrained 'o_ledr' to bel 'X11/Y33/io0'
Info: constrained 'i_pp_dir' to bel 'X5/Y0/io1'
Info: constrained 'i_pp_clk' to bel 'X14/Y0/io0'
Info: constrained 'io_pp_data[0]' to bel 'X7/Y0/io1'
Info: constrained 'io_pp_data[1]' to bel 'X6/Y0/io1'
Info: constrained 'io_pp_data[2]' to bel 'X24/Y0/io0'
Info: constrained 'io_pp_data[3]' to bel 'X12/Y0/io1'
Info: constrained 'io_pp_data[4]' to bel 'X10/Y0/io1'
Info: constrained 'io_pp_data[5]' to bel 'X17/Y0/io1'
Info: constrained 'io_pp_data[6]' to bel 'X15/Y0/io1'
Info: constrained 'io_pp_data[7]' to bel 'X21/Y0/io1'
Info: constrained 'o_pp_clkfb' to bel 'X13/Y0/io1'

Info: Device utilisation:
Info:            ICESTORM_LC:   956/ 7680    12%
Info:           ICESTORM_RAM:     1/   32     3%
Info:                  SB_IO:    17/  256     6%
Info:                  SB_GB:     8/    8   100%
Info:           ICESTORM_PLL:     1/    2    50%
Info:            SB_WARMBOOT:     0/    1     0%

--- a/rtl/debouncer/Makefile
+++ b/rtl/debouncer/Makefile
@@ -38,7 +38,7 @@
 ##
 all: testbus
 YOSYS      := yosys
-NEXTPNR    := nextpnr-ice40 --hx8k -r --package ct256
+NEXTPNR    := nextpnr-ice40 -l pnr.log --hx8k -r --package ct256
 ICEPACK    := icepack
 ICETIME    := icetime
 
@@ -49,9 +49,9 @@ ICETIME    := icetime
 %.json: %.v
 	$(YOSYS) -p 'synth_ice40 -json $@' $<
 %.asc: %.json %.pcf
-	$(NEXTPNR) --freq 80 --pcf $*.pcf --json $*.json --asc $@
+	$(NEXTPNR) --freq 66 --pcf $*.pcf --json $*.json --asc $@
 %.bin: %.asc
-	$(ICETIME) -d hx8k -c 80 $<
+	$(ICETIME) -d hx8k -c 66 $<
 	$(ICEPACK) $< $@
 
 PPSRCS := ppio.v pport.v
